# ledgr

./: .gitignore  content.config.ts  dbs-statement.json  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
app/: app.config.ts  app.vue  error.vue
app/assets/css/: tailwind.css
app/components/: ActionBar.vue  CustomiseDrawer.vue  DateInput.vue  FormBuilder.vue  GradientBlur.vue  HomeBar.vue  HomeSidebar.vue  HomeWidgets.vue  MobileHeader.vue  NavBar.vue  SettingsDrawer.vue  StatementUpload.vue  TestComp.vue  TransactionItem.vue
app/components/action/: Bar.vue  BarItem.vue  BarMenu.vue  BarMenuTrigger.vue
app/components/home/: Bar.vue  GlanceInsights.vue  GlanceTransactions.vue  Widgets.vue
app/components/nav/: Bar.vue  Dropdown.vue  Item.vue  LinearAndroidBar.vue
app/components/widget/: Budget.vue  Create.vue  ExpenseChart.vue  Goal.vue
app/composables/: useActionBar.ts  useBankStatement.ts  useDonutChart.ts  useHaptics.ts  useLedger.ts  useLongPressClick.ts  useNavBar.ts  useOverlayItems.ts  useSelectedTransactions.ts  useSwipeable.ts  useWidget.ts
app/layouts/: default.vue
app/lib/ledger/: database.ts  domain.ts  (+6 more)
app/middleware/: actionState.global.ts
app/pages/: budget.vue  index.vue  insights.vue  search.vue  settings.vue  test.vue  user.vue
app/parsers/: dbs.ts  errors.ts  parser.ts  registry.ts  types.ts
app/types/: index.ts
app/utils/: colorTransition.ts
content/sidebar/: default.yml  settings.yml
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
(+8 files in other folders)
